[gd_scene load_steps=3 format=3 uid="uid://d05wpnsndc2l6"]

[ext_resource type="Script" uid="uid://twkfe5x2yn3x" path="res://Main.gd" id="1"]
[ext_resource type="Script" uid="uid://cniweb1wq150a" path="res://thread_sidebar.gd" id="2_uu6xs"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -2.0
grow_horizontal = 2
grow_vertical = 2

[node name="ThreadSidebar" type="VBoxContainer" parent="HBoxContainer"]
z_index = -1
custom_minimum_size = Vector2(250, 800)
layout_mode = 2
script = ExtResource("2_uu6xs")

[node name="Button" type="Button" parent="HBoxContainer/ThreadSidebar"]
custom_minimum_size = Vector2(250, 40)
layout_mode = 2
text = "New Thread"

[node name="ThreadListScroll" type="ScrollContainer" parent="HBoxContainer/ThreadSidebar"]
layout_mode = 2
size_flags_vertical = 3

[node name="ThreadList" type="VBoxContainer" parent="HBoxContainer/ThreadSidebar/ThreadListScroll"]
custom_minimum_size = Vector2(250, 755)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="MainArea" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(1026, 800)
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/MainArea"]
custom_minimum_size = Vector2(1026, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ChatLog" type="VBoxContainer" parent="HBoxContainer/MainArea/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MainArea/ScrollContainer/ChatLog"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/MainArea/ScrollContainer/ChatLog/HBoxContainer"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="PromptInput" type="HBoxContainer" parent="HBoxContainer/MainArea"]
custom_minimum_size = Vector2(1026, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="TextEdit" type="TextEdit" parent="HBoxContainer/MainArea/PromptInput"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Speak your will..."

[node name="Button" type="Button" parent="HBoxContainer/MainArea/PromptInput"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
text = "Send"

[node name="ThreadListRequest" type="HTTPRequest" parent="."]

[node name="ThreadActivateRequest" type="HTTPRequest" parent="."]

[node name="Interface" type="HTTPRequest" parent="."]

[node name="ThreadCreateRequest" type="HTTPRequest" parent="."]

[node name="ThreadHistoryRequest" type="HTTPRequest" parent="."]
